fixed range on small screens

--- a/styles/alerts.module.css
+++ b/styles/alerts.module.css
@@ -8,4 +8,5 @@
   margin-bottom: 10rem;
   padding: 3rem;
   color: #707079;
+  background-color: #ebebeb;
 }
